# imVPM

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
assets/: archive.cmake  state-tests.cpp  theming.patch
assets/dump/: acf.py  acf.txt  charts.ods  fft.py  fft.txt  han.txt  match-orig.txt  match-orig8192.txt  match-para.txt  match-para8192.txt  pitch.py  pitch.txt  plot.py  wave.txt
assets/res/: imvpm.pdn  imvpm.rc
src/: Analyzer.hpp  AudioHandler.cpp  AudioHandler.h  Logger.h  Logger.hpp  fonts.h  imvpm.cpp  testapp.cpp  version.h
src/imgui/: imgui_dx11_font_stub.h  imgui_dx11_font_stub.patch  imgui_local.h  imgui_widgets.h
src/imgui/backends/: sdl2_opengl3.cpp  sdl2_vulkan.cpp  sdl3_opengl3.cpp  sdl3_vulkan.cpp  win32_dx11.cpp
